# netforge-iac

./: Makefile  README.md  pyproject.toml
examples/: lab.toml
netforge/: __init__.py  cli.py  generator.py  model.py
tests/: test_netforge.py
