[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netforge-iac"
version = "1.0.0"
description = "Dependency-free network source-of-truth validator and configuration generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro" }]
keywords = ["network", "iac", "vlan", "dnsmasq", "systemd-networkd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Networking"
]

[project.scripts]
netforge = "netforge.cli:main"

[tool.setuptools]
packages = ["netforge"]
